# kaze

./: .gitignore  .scalafmt.conf  build.sbt  readme.md
cpp/: .clangd  .editorconfig  CMakeLists.txt
cpp/.cache/clangd/index/: kaze.h.C12A92AEDD2DC2C1.idx  utils.cpp.EB840393C73326DE.idx
cpp/src/: kaze.h  main.cpp  utils.cpp
data/: readme.md
lib/: libkaze.dylib
query/: league_team.json  matches.csv  sum_age.json  to_unix.json
scripts/: README.md  pyproject.toml
scripts/src/scripts/: __main__.py  transform.py
src/main/scala/: BunKaze.scala  KamiKaze.scala  Kawa.scala  KisokuKaze.scala  Main.scala  TheTailor.scala  YomiKaze.scala
src/main/scala/panama/: ABI.scala  ModuleQuery.scala  ModuleUtils.scala  TheTailor.scala  readme.md
src/main/scala/query/: SumAge.scala
