[project]
name = "scripts"
version = "0.1.0"
description = "Unpivot football-data.co.uk season match data"
authors = [
    {name = "Misha Tavkhelidze",email = "misha.tavkhelidze@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "scripts", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
